crates/components/tests/snapshots/components__sensors_cells_chart.snap
---
source: crates/components/tests/components.rs
expression: dump
---
[#cdd6f4/-/REVERSED]chip            [-/-/NONE] [#cdd6f4/-/REVERSED]sensor   [-/-/NONE] [#cdd6f4/-/REVERSED]  value[-/-/NONE] [#cdd6f4/-/REVERSED]limit[-/-/NONE] [#cdd6f4/-/REVERSED]of lim[-/-/NONE]                                                                           
[#cdd6f4/-/NONE]spd5118[-/-/NONE]          [#a6adc8/-/NONE]temp1[-/-/NONE]      [#cdd6f4/-/BOLD]40.9°C[-/-/NONE]   [#a6adc8/-/NONE]55°[-/-/NONE]  [#cdd6f4/-/NONE] 74 %[-/-/NONE] [#94e1d4/-/NONE]█[#99e2d3/-/NONE]█[#9fe2d1/-/NONE]█[#a4e2d0/-/NONE]█[#aae2ce/-/NONE]█[#afe2cc/-/NONE]█[#b4e2ca/-/NONE]██[#b9e2c9/-/NONE]█[#bee2c7/-/NONE]█[#c3e2c5/-/NONE]█[#c8e2c3/-/NONE]█[#cce2c2/-/NONE]█[#d1e2c0/-/NONE]█[#d6e2be/-/NONE]█[#dae2bc/-/NONE]█[#dfe2ba/-/NONE]█[#e3e2b8/-/NONE]█[#e7e2b6/-/NONE]█[#ece2b5/-/NONE]█[#f0e2b3/-/NONE]██[#f4e2b1/-/NONE]█[#f8e2ae/-/NONE]█[#f9dfad/-/NONE]█[#f9ddab/-/NONE]█[#f9dba9/-/NONE]█[#f9d9a7/-/NONE]█[#f9d6a5/-/NONE]█[#f9d4a3/-/NONE]█[#fad2a1/-/NONE]█[#fad09f/-/NONE]█[#facd9d/-/NONE]█[#facb9b/-/NONE]█[#fac999/-/NONE]██[#fac798/-/NONE]█[#fac596/-/NONE]█[#fac294/-/NONE]█[#fac092/-/NONE]█[#fabe90/-/NONE]█[#fabc8e/-/NONE]█[#fab98c/-/NONE]█[#fab78a/-/NONE]█[#fab588/-/NONE]█[#fab286/-/NONE]█[#f9b188/-/NONE]█[#f9af8a/-/NONE]██[#f9ad8c/-/NONE]█[#f8ab8e/-/NONE]█[#313244/-/NONE]░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE] 74 %
[#cdd6f4/-/NONE]spd5118#2[-/-/NONE]        [#a6adc8/-/NONE]temp1[-/-/NONE]      [#cdd6f4/-/BOLD]40.6°C[-/-/NONE]   [#a6adc8/-/NONE]55°[-/-/NONE]  [#cdd6f4/-/NONE] 74 %[-/-/NONE] [#94e1d4/-/NONE]█[#99e2d3/-/NONE]█[#9fe2d1/-/NONE]█[#a4e2d0/-/NONE]█[#aae2ce/-/NONE]█[#afe2cc/-/NONE]█[#b4e2ca/-/NONE]██[#b9e2c9/-/NONE]█[#bee2c7/-/NONE]█[#c3e2c5/-/NONE]█[#c8e2c3/-/NONE]█[#cce2c2/-/NONE]█[#d1e2c0/-/NONE]█[#d6e2be/-/NONE]█[#dae2bc/-/NONE]█[#dfe2ba/-/NONE]█[#e3e2b8/-/NONE]█[#e7e2b6/-/NONE]█[#ece2b5/-/NONE]█[#f0e2b3/-/NONE]██[#f4e2b1/-/NONE]█[#f8e2ae/-/NONE]█[#f9dfad/-/NONE]█[#f9ddab/-/NONE]█[#f9dba9/-/NONE]█[#f9d9a7/-/NONE]█[#f9d6a5/-/NONE]█[#f9d4a3/-/NONE]█[#fad2a1/-/NONE]█[#fad09f/-/NONE]█[#facd9d/-/NONE]█[#facb9b/-/NONE]█[#fac999/-/NONE]██[#fac798/-/NONE]█[#fac596/-/NONE]█[#fac294/-/NONE]█[#fac092/-/NONE]█[#fabe90/-/NONE]█[#fabc8e/-/NONE]█[#fab98c/-/NONE]█[#fab78a/-/NONE]█[#fab588/-/NONE]█[#fab286/-/NONE]█[#f9b188/-/NONE]█[#f9af8a/-/NONE]██[#f9ad8c/-/NONE]█[#313244/-/NONE]░░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE] 74 %
[#cdd6f4/-/NONE]nvme[-/-/NONE]             [#a6adc8/-/NONE]Composite[-/-/NONE]  [#cdd6f4/-/BOLD]50.1°C[-/-/NONE]   [#a6adc8/-/NONE]82°[-/-/NONE]  [#cdd6f4/-/NONE] 61 %[-/-/NONE] [#94e1d4/-/NONE]█[#99e2d3/-/NONE]█[#9fe2d1/-/NONE]█[#a4e2d0/-/NONE]█[#aae2ce/-/NONE]█[#afe2cc/-/NONE]█[#b4e2ca/-/NONE]██[#b9e2c9/-/NONE]█[#bee2c7/-/NONE]█[#c3e2c5/-/NONE]█[#c8e2c3/-/NONE]█[#cce2c2/-/NONE]█[#d1e2c0/-/NONE]█[#d6e2be/-/NONE]█[#dae2bc/-/NONE]█[#dfe2ba/-/NONE]█[#e3e2b8/-/NONE]█[#e7e2b6/-/NONE]█[#ece2b5/-/NONE]█[#f0e2b3/-/NONE]██[#f4e2b1/-/NONE]█[#f8e2ae/-/NONE]█[#f9dfad/-/NONE]█[#f9ddab/-/NONE]█[#f9dba9/-/NONE]█[#f9d9a7/-/NONE]█[#f9d6a5/-/NONE]█[#f9d4a3/-/NONE]█[#fad2a1/-/NONE]█[#fad09f/-/NONE]█[#facd9d/-/NONE]█[#facb9b/-/NONE]█[#fac999/-/NONE]██[#fac798/-/NONE]█[#fac596/-/NONE]█[#fac294/-/NONE]█[#fac092/-/NONE]█[#fabe90/-/NONE]█[#fabc8e/-/NONE]█[#313244/-/NONE]░░░░░░░░░░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE] 61 %
[#cdd6f4/-/NONE]nvme#2[-/-/NONE]           [#a6adc8/-/NONE]Composite[-/-/NONE]  [#cdd6f4/-/BOLD]46.8°C[-/-/NONE]   [#a6adc8/-/NONE]84°[-/-/NONE]  [#cdd6f4/-/NONE] 56 %[-/-/NONE] [#94e1d4/-/NONE]█[#99e2d3/-/NONE]█[#9fe2d1/-/NONE]█[#a4e2d0/-/NONE]█[#aae2ce/-/NONE]█[#afe2cc/-/NONE]█[#b4e2ca/-/NONE]██[#b9e2c9/-/NONE]█[#bee2c7/-/NONE]█[#c3e2c5/-/NONE]█[#c8e2c3/-/NONE]█[#cce2c2/-/NONE]█[#d1e2c0/-/NONE]█[#d6e2be/-/NONE]█[#dae2bc/-/NONE]█[#dfe2ba/-/NONE]█[#e3e2b8/-/NONE]█[#e7e2b6/-/NONE]█[#ece2b5/-/NONE]█[#f0e2b3/-/NONE]██[#f4e2b1/-/NONE]█[#f8e2ae/-/NONE]█[#f9dfad/-/NONE]█[#f9ddab/-/NONE]█[#f9dba9/-/NONE]█[#f9d9a7/-/NONE]█[#f9d6a5/-/NONE]█[#f9d4a3/-/NONE]█[#fad2a1/-/NONE]█[#fad09f/-/NONE]█[#facd9d/-/NONE]█[#facb9b/-/NONE]█[#fac999/-/NONE]██[#fac798/-/NONE]█[#fac596/-/NONE]█[#313244/-/NONE]░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE] 56 %
[#cdd6f4/-/NONE]k10temp[-/-/NONE]          [#a6adc8/-/NONE]Tctl[-/-/NONE]       [#cdd6f4/-/BOLD]52.9°C[-/-/NONE]  [#a6adc8/-/NONE]~95°[-/-/NONE]  [#cdd6f4/-/NONE] 56 %[-/-/NONE] [#94e1d4/-/NONE]█[#99e2d3/-/NONE]█[#9fe2d1/-/NONE]█[#a4e2d0/-/NONE]█[#aae2ce/-/NONE]█[#afe2cc/-/NONE]█[#b4e2ca/-/NONE]██[#b9e2c9/-/NONE]█[#bee2c7/-/NONE]█[#c3e2c5/-/NONE]█[#c8e2c3/-/NONE]█[#cce2c2/-/NONE]█[#d1e2c0/-/NONE]█[#d6e2be/-/NONE]█[#dae2bc/-/NONE]█[#dfe2ba/-/NONE]█[#e3e2b8/-/NONE]█[#e7e2b6/-/NONE]█[#ece2b5/-/NONE]█[#f0e2b3/-/NONE]██[#f4e2b1/-/NONE]█[#f8e2ae/-/NONE]█[#f9dfad/-/NONE]█[#f9ddab/-/NONE]█[#f9dba9/-/NONE]█[#f9d9a7/-/NONE]█[#f9d6a5/-/NONE]█[#f9d4a3/-/NONE]█[#fad2a1/-/NONE]█[#fad09f/-/NONE]█[#facd9d/-/NONE]█[#facb9b/-/NONE]█[#fac999/-/NONE]██[#fac798/-/NONE]█[#fac596/-/NONE]█[#313244/-/NONE]░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE] 56 %
[#cdd6f4/-/NONE]k10temp[-/-/NONE]          [#a6adc8/-/NONE]Tccd1[-/-/NONE]      [#cdd6f4/-/BOLD]50.2°C[-/-/NONE]  [#a6adc8/-/NONE]~95°[-/-/NONE]  [#cdd6f4/-/NONE] 53 %[-/-/NONE] [#94e1d4/-/NONE]█[#99e2d3/-/NONE]█[#9fe2d1/-/NONE]█[#a4e2d0/-/NONE]█[#aae2ce/-/NONE]█[#afe2cc/-/NONE]█[#b4e2ca/-/NONE]██[#b9e2c9/-/NONE]█[#bee2c7/-/NONE]█[#c3e2c5/-/NONE]█[#c8e2c3/-/NONE]█[#cce2c2/-/NONE]█[#d1e2c0/-/NONE]█[#d6e2be/-/NONE]█[#dae2bc/-/NONE]█[#dfe2ba/-/NONE]█[#e3e2b8/-/NONE]█[#e7e2b6/-/NONE]█[#ece2b5/-/NONE]█[#f0e2b3/-/NONE]██[#f4e2b1/-/NONE]█[#f8e2ae/-/NONE]█[#f9dfad/-/NONE]█[#f9ddab/-/NONE]█[#f9dba9/-/NONE]█[#f9d9a7/-/NONE]█[#f9d6a5/-/NONE]█[#f9d4a3/-/NONE]█[#fad2a1/-/NONE]█[#fad09f/-/NONE]█[#facd9d/-/NONE]█[#facb9b/-/NONE]█[#fac999/-/NONE]██[#313244/-/NONE]░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE] 53 %
[#cdd6f4/-/NONE]nvme[-/-/NONE]             [#a6adc8/-/NONE]Sensor 2[-/-/NONE]   [#cdd6f4/-/BOLD]52.8°C[-/-/NONE] [#a6adc8/-/NONE]~100°[-/-/NONE]  [#cdd6f4/-/NONE] 53 %[-/-/NONE] [#94e1d4/-/NONE]█[#99e2d3/-/NONE]█[#9fe2d1/-/NONE]█[#a4e2d0/-/NONE]█[#aae2ce/-/NONE]█[#afe2cc/-/NONE]█[#b4e2ca/-/NONE]██[#b9e2c9/-/NONE]█[#bee2c7/-/NONE]█[#c3e2c5/-/NONE]█[#c8e2c3/-/NONE]█[#cce2c2/-/NONE]█[#d1e2c0/-/NONE]█[#d6e2be/-/NONE]█[#dae2bc/-/NONE]█[#dfe2ba/-/NONE]█[#e3e2b8/-/NONE]█[#e7e2b6/-/NONE]█[#ece2b5/-/NONE]█[#f0e2b3/-/NONE]██[#f4e2b1/-/NONE]█[#f8e2ae/-/NONE]█[#f9dfad/-/NONE]█[#f9ddab/-/NONE]█[#f9dba9/-/NONE]█[#f9d9a7/-/NONE]█[#f9d6a5/-/NONE]█[#f9d4a3/-/NONE]█[#fad2a1/-/NONE]█[#fad09f/-/NONE]█[#facd9d/-/NONE]█[#facb9b/-/NONE]█[#fac999/-/NONE]██[#313244/-/NONE]░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE] 53 %
[#cdd6f4/-/NONE]nvme[-/-/NONE]             [#a6adc8/-/NONE]Sensor 1[-/-/NONE]   [#cdd6f4/-/BOLD]51.4°C[-/-/NONE] [#a6adc8/-/NONE]~100°[-/-/NONE]  [#cdd6f4/-/NONE] 51 %[-/-/NONE] [#94e1d4/-/NONE]█[#99e2d3/-/NONE]█[#9fe2d1/-/NONE]█[#a4e2d0/-/NONE]█[#aae2ce/-/NONE]█[#afe2cc/-/NONE]█[#b4e2ca/-/NONE]██[#b9e2c9/-/NONE]█[#bee2c7/-/NONE]█[#c3e2c5/-/NONE]█[#c8e2c3/-/NONE]█[#cce2c2/-/NONE]█[#d1e2c0/-/NONE]█[#d6e2be/-/NONE]█[#dae2bc/-/NONE]█[#dfe2ba/-/NONE]█[#e3e2b8/-/NONE]█[#e7e2b6/-/NONE]█[#ece2b5/-/NONE]█[#f0e2b3/-/NONE]██[#f4e2b1/-/NONE]█[#f8e2ae/-/NONE]█[#f9dfad/-/NONE]█[#f9ddab/-/NONE]█[#f9dba9/-/NONE]█[#f9d9a7/-/NONE]█[#f9d6a5/-/NONE]█[#f9d4a3/-/NONE]█[#fad2a1/-/NONE]█[#fad09f/-/NONE]█[#facd9d/-/NONE]█[#facb9b/-/NONE]█[#fac999/-/NONE]█[#313244/-/NONE]░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE] 51 %
[#cdd6f4/-/NONE]mt7925_phy0[-/-/NONE]      [#a6adc8/-/NONE]temp1[-/-/NONE]      [#cdd6f4/-/BOLD]50.6°C[-/-/NONE] [#a6adc8/-/NONE]~100°[-/-/NONE]  [#cdd6f4/-/NONE] 51 %[-/-/NONE] [#94e1d4/-/NONE]█[#99e2d3/-/NONE]█[#9fe2d1/-/NONE]█[#a4e2d0/-/NONE]█[#aae2ce/-/NONE]█[#afe2cc/-/NONE]█[#b4e2ca/-/NONE]██[#b9e2c9/-/NONE]█[#bee2c7/-/NONE]█[#c3e2c5/-/NONE]█[#c8e2c3/-/NONE]█[#cce2c2/-/NONE]█[#d1e2c0/-/NONE]█[#d6e2be/-/NONE]█[#dae2bc/-/NONE]█[#dfe2ba/-/NONE]█[#e3e2b8/-/NONE]█[#e7e2b6/-/NONE]█[#ece2b5/-/NONE]█[#f0e2b3/-/NONE]██[#f4e2b1/-/NONE]█[#f8e2ae/-/NONE]█[#f9dfad/-/NONE]█[#f9ddab/-/NONE]█[#f9dba9/-/NONE]█[#f9d9a7/-/NONE]█[#f9d6a5/-/NONE]█[#f9d4a3/-/NONE]█[#fad2a1/-/NONE]█[#fad09f/-/NONE]█[#facd9d/-/NONE]█[#facb9b/-/NONE]█[#313244/-/NONE]░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE] 51 %
[#cdd6f4/-/NONE]k10temp[-/-/NONE]          [#a6adc8/-/NONE]Tccd2[-/-/NONE]      [#cdd6f4/-/BOLD]48.0°C[-/-/NONE]  [#a6adc8/-/NONE]~95°[-/-/NONE]  [#cdd6f4/-/NONE] 51 %[-/-/NONE] [#94e1d4/-/NONE]█[#99e2d3/-/NONE]█[#9fe2d1/-/NONE]█[#a4e2d0/-/NONE]█[#aae2ce/-/NONE]█[#afe2cc/-/NONE]█[#b4e2ca/-/NONE]██[#b9e2c9/-/NONE]█[#bee2c7/-/NONE]█[#c3e2c5/-/NONE]█[#c8e2c3/-/NONE]█[#cce2c2/-/NONE]█[#d1e2c0/-/NONE]█[#d6e2be/-/NONE]█[#dae2bc/-/NONE]█[#dfe2ba/-/NONE]█[#e3e2b8/-/NONE]█[#e7e2b6/-/NONE]█[#ece2b5/-/NONE]█[#f0e2b3/-/NONE]██[#f4e2b1/-/NONE]█[#f8e2ae/-/NONE]█[#f9dfad/-/NONE]█[#f9ddab/-/NONE]█[#f9dba9/-/NONE]█[#f9d9a7/-/NONE]█[#f9d6a5/-/NONE]█[#f9d4a3/-/NONE]█[#fad2a1/-/NONE]█[#fad09f/-/NONE]█[#facd9d/-/NONE]█[#facb9b/-/NONE]█[#313244/-/NONE]░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░[-/-/NONE] [#cdd6f4/-/NONE] 51 %
[#a6adc8/-/NONE]RAPL: needs a udev rule — see doctor[-/-/NONE]                                                                                      
[-/-/NONE]                                                                                                                          
[-/-/NONE]                                                                                                                          
[-/-/NONE]                                                                                                                          
[-/-/NONE]                                                                                                                          
[-/-/NONE]                                                                                                                          
[-/-/NONE]                                                                                                                          
[#a6adc8/-/NONE]chart · 60 s · [#cdd6f4/-/NONE]spd5118:temp1 41°[#a6adc8/-/NONE] · [#cdd6f4/-/NONE]spd5118#2:temp1 41°[#a6adc8/-/NONE] · [#cdd6f4/-/NONE]nvme:Composite 50°[#a6adc8/-/NONE] · [#cdd6f4/-/NONE]nvme#2:Composite 47°[-/-/NONE]                        
[-/-/NONE]                                                                                                                          
[-/-/NONE]                                                                                                                          
[-/-/NONE]   [#f7a693/-/NONE]⣀⣀⣀[#f8a891/-/NONE]⣀⣀⣀⣀⣀⣀⣀⡀[-/-/NONE]                                                                                                            
[#313244/-/NONE]─────────────[#f8a891/-/NONE]⠈⠉[#f8a990/-/NONE]⠉⠉⠉[#f8ab8e/-/NONE]⠉⠉⠉⠉⠑⠒[#f9ad8c/-/NONE]⠒⠢⠤[#f9af8a/-/NONE]⠤⠤⠤⠤⠤⠤⠤⠤⠤[#f9b188/-/NONE]⠤⠤⣀[#fab286/-/NONE]⣀⣀⣀⣀⣀⣀⣀⣀[#313244/-/NONE]─────────────────────────────────────────────────────────────[#f9af8a/-/NONE]nvme:Composite
[-/-/NONE]                                               [#fab286/-/NONE]⠉[#fab588/-/NONE]⠉⠉⠉⠉⠉⠉⠉⠉⠒[#fab78a/-/NONE]⠒⠒⠒⠒⠒⠢⠤⠤⠔⠒⠒⠢⠤[#fab98c/-/NONE]⠤⠤⠤⠤⠤⠤⠤⠤⠤⠤⠔⠒⠒⠢⠤[#fab78a/-/NONE]⠤⠔⠒⠒⠒⠒⠒⠒[#fac092/-/NONE]⣒[#fabe90/-/NONE]⣒⣒[#fab78a/-/NONE]⠒[#fab588/-/NONE]⠒⠒⠒⠒⠒⠉[#fab286/-/NONE]⠉⠉⠉⠉⠉[-/-/NONE]   [#fabe90/-/NONE]⣀⣀⣀[-/-/NONE]        
[-/-/NONE]                                               [#fac999/-/NONE]⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀[#fac798/-/NONE]⣀⡠⠤[#fac596/-/NONE]⠤⠤⠤⠤⠔⠒⠒⠒⠒⠒⠢⠤[#fac294/-/NONE]⠤⠔⠒⠒⠊⠉[#fac092/-/NONE]⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉[-/-/NONE]   [#fabe90/-/NONE]⠉⠉⠉⠉⠉⠉⠉⠉⠉⠉[#fac092/-/NONE]nvme#2:Composite
[#313244/-/NONE]───[#fad09f/-/NONE]⠶⠦⠤⠤⢔⣒⣒⡢⠤⠤⢔⣒⣒⣢⣤⣤⣔⣒⣒⣒⣒⣒⣒⣒⣒⣒⣒⣒⣒⠒[#facd9d/-/NONE]⠒⠒⠒⠒⠒⠉[#facb9b/-/NONE]⠉⠉⠉⠉⠉⠉[#fac999/-/NONE]⠉⠉[#313244/-/NONE]───────────────────────────────────────────────────────────────────────────
[-/-/NONE]   [#f9ddab/-/NONE]⠤⠤⠤[#f9dfad/-/NONE]⠤⢄⣀⣀⡠⠤⠤⢄⣀[#f8e2ae/-/NONE]⣀⣀⣀⣀⣀⣀⣀⡀[-/-/NONE]         [#f9d6a5/-/NONE]⠉⠉⠉⠉[#f9d9a7/-/NONE]⠉⠉⠉⠉⠉⠉⠉⠉⠒[#f9dba9/-/NONE]⠒⠒⠒[#f9ddab/-/NONE]⠒⠒⠤⠤⠤⠤[#f9dfad/-/NONE]⠤⠤⣀⣀⣀⡠⠤⠤⢄⣀⣀⣀⣀⣀⣀⣀[#f8e2ae/-/NONE]⣀⡀[-/-/NONE]                                     [#f8e2ae/-/NONE]spd5118:temp1
[#313244/-/NONE]──────────────────────[#f8e2ae/-/NONE]⠈⠉⠉⠉⠉[#f4e2b1/-/NONE]⠉⠉⠒[#f0e2b3/-/NONE]⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒⠒[#ece2b5/-/NONE]⠒⠒⠒⠒⠒⠤[#e7e2b6/-/NONE]⠤⠤⣀[#e3e2b8/-/NONE]⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣀⣈⣉⣉⣉⣉⣉⣉⣉⣉⣉⣉⣉⣉⣉⣉⣉⣉⣉⣉⣉⣉⣉⣒[#e7e2b6/-/NONE]⣒⣒⠭⠭⠭⣒⣒⣒⠭[#ece2b5/-/NONE]⠭⠭⠭⠭[#f0e2b3/-/NONE]spd5118#2:temp1
[-/-/NONE]                                                                                                                          
[-/-/NONE]                                                                                                                          
[-/-/NONE]
