crates/components/tests/snapshots/components__sensors_zoom_at_250x70.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(se.as_mut(), &history, &th, size)"
---
size: 248x66
tier: chart
view:
  stack:
    children:
      - - Fill(3)
        - stack:
            children:
              - - Fill(1)
                - table:
                    columns:
                      - chip
                      - sensor
                      - value
                      - limit
                      - of lim
                    rows:
                      - - spd5118
                        - temp1
                        - 40.9°C
                        - 55°
                        - " 74 %"
                      - - "spd5118#2"
                        - temp1
                        - 40.6°C
                        - 55°
                        - " 74 %"
                      - - nvme
                        - Composite
                        - 50.1°C
                        - 82°
                        - " 61 %"
                      - - "nvme#2"
                        - Composite
                        - 46.8°C
                        - 84°
                        - " 56 %"
                      - - k10temp
                        - Tctl
                        - 52.9°C
                        - ~95°
                        - " 56 %"
                      - - k10temp
                        - Tccd1
                        - 50.2°C
                        - ~95°
                        - " 53 %"
                      - - nvme
                        - Sensor 2
                        - 52.8°C
                        - ~100°
                        - " 53 %"
                      - - nvme
                        - Sensor 1
                        - 51.4°C
                        - ~100°
                        - " 51 %"
                      - - mt7925_phy0
                        - temp1
                        - 50.6°C
                        - ~100°
                        - " 51 %"
                      - - k10temp
                        - Tccd2
                        - 48.0°C
                        - ~95°
                        - " 51 %"
                      - - "r8169_0_c00:00"
                        - temp1
                        - 55.2°C
                        - 110°
                        - " 50 %"
                      - - "nvme#3"
                        - Composite
                        - 37.2°C
                        - 75°
                        - " 50 %"
                      - - "r8169_0_b00:00"
                        - temp1
                        - 58.2°C
                        - 120°
                        - " 49 %"
                    scroll: 0
                    selected: ~
                    sort: ~
              - - Len(1)
                - text:
                    - - bold: false
                        role: TextMuted
                        s: "RAPL: needs a udev rule — see doctor"
            dir: V
      - - Len(1)
        - text:
            - - bold: false
                role: TextMuted
                s: "chart · 1 min · "
              - bold: false
                role: Text
                s: "spd5118:temp1"
              - bold: false
                role: Text
                s: " 41°"
              - bold: false
                role: TextMuted
                s: " · "
              - bold: false
                role: Text
                s: "spd5118#2:temp1"
              - bold: false
                role: Text
                s: " 41°"
              - bold: false
                role: TextMuted
                s: " · "
              - bold: false
                role: Text
                s: "nvme:Composite"
              - bold: false
                role: Text
                s: " 50°"
              - bold: false
                role: TextMuted
                s: " · "
              - bold: false
                role: Text
                s: "nvme#2:Composite"
              - bold: false
                role: Text
                s: " 47°"
      - - Fill(2)
        - chart:
            - label: "spd5118:temp1"
              points: 39
            - label: "spd5118#2:temp1"
              points: 39
            - label: "nvme:Composite"
              points: 39
            - label: "nvme#2:Composite"
              points: 39
    dir: V
