crates/components/tests/snapshots/components__sources_1x1_at_250x70.snap
---
source: crates/components/tests/components.rs
assertion_line: 93
expression: "view_snapshot(s.as_mut(), &store, &th, size)"
---
size: 17x8
tier: list
view:
  text:
    - - bold: false
        role: Text
        s: audio
      - bold: false
        role: TextGhost
        s: " "
      - bold: false
        role: Info
        s: starting
    - - bold: false
        role: Text
        s: cpu
      - bold: false
        role: TextGhost
        s: " "
      - bold: false
        role: Info
        s: starting
    - - bold: false
        role: Text
        s: disk
      - bold: false
        role: TextGhost
        s: " "
      - bold: false
        role: Info
        s: starting
    - - bold: false
        role: Text
        s: gpu
      - bold: false
        role: TextGhost
        s: " "
      - bold: false
        role: Info
        s: starting
    - - bold: false
        role: Text
        s: mpris
      - bold: false
        role: TextGhost
        s: " "
      - bold: false
        role: Info
        s: starting
    - - bold: false
        role: Text
        s: net
      - bold: false
        role: TextGhost
        s: " "
      - bold: false
        role: Info
        s: starting
    - - bold: false
        role: Text
        s: pins
      - bold: false
        role: TextGhost
        s: " "
      - bold: false
        role: Info
        s: starting
    - - bold: false
        role: Text
        s: sensors
      - bold: false
        role: TextGhost
        s: " "
      - bold: false
        role: Info
        s: starting
