crates/components/tests/snapshots/components__sources_6x3_at_120x40_dense.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(s.as_mut(), &store, &th, size)"
---
size: 59x18
tier: table
view:
  table:
    columns:
      - SRC
      - STATE
      - GEN
      - AGE
      - DROP
      - RST
      - NOTE
    rows:
      - - audio
        - starting
        - "3"
        - 0s
        - "0"
        - "0"
        - dsp 0.3 ms
      - - cpu
        - starting
        - "3"
        - 0s
        - "0"
        - "0"
        - scan 6.5 ms
      - - disk
        - starting
        - "3"
        - 0s
        - "0"
        - "0"
        - scan 0.40 ms
      - - gpu
        - starting
        - "3"
        - 0s
        - "0"
        - "0"
        - nvml 0.1+2.3+2.1 = 4.5 ms/s
      - - mpris
        - starting
        - "3"
        - 0s
        - "0"
        - "0"
        - ""
      - - net
        - starting
        - "3"
        - 0s
        - "0"
        - "0"
        - scan 3.2 ms · 24/32 attributed
      - - pins
        - starting
        - "3"
        - 0s
        - "0"
        - "0"
        - read 4.0 ms · ≤2 tx/s
      - - sensors
        - starting
        - "3"
        - 0s
        - "0"
        - "0"
        - walk 0.6 ms
    scroll: 0
    selected: ~
    sort: ~
