crates/components/tests/snapshots/components__sources_cells_4x2.snap
---
source: crates/components/tests/components.rs
expression: "gridwatch_ui::dump::cells(&buf)"
---
[#cdd6f4/-/REVERSED]SRC     [-/-/NONE] [#cdd6f4/-/REVERSED]STATE      [-/-/NONE] [#cdd6f4/-/REVERSED]   GEN[-/-/NONE] [#cdd6f4/-/REVERSED]   AGE[-/-/NONE] [#cdd6f4/-/REVERSED] DROP[-/-/NONE] [#cdd6f4/-/REVERSED]RST[-/-/NONE] [#cdd6f4/-/REVERSED]NOTE                          [-/-/NONE]     
[#cdd6f4/-/NONE]audio[-/-/NONE]    [#89dceb/-/NONE]starting[-/-/NONE]         [#cdd6f4/-/NONE]3[-/-/NONE]     [#a6adc8/-/NONE]0s[-/-/NONE]     [#a6adc8/-/NONE]0[-/-/NONE]   [#a6adc8/-/NONE]0[-/-/NONE] [#313244/-/NONE]dsp 0.3 ms[-/-/NONE]                         
[#cdd6f4/-/NONE]cpu[-/-/NONE]      [#89dceb/-/NONE]starting[-/-/NONE]         [#cdd6f4/-/NONE]3[-/-/NONE]     [#a6adc8/-/NONE]0s[-/-/NONE]     [#a6adc8/-/NONE]0[-/-/NONE]   [#a6adc8/-/NONE]0[-/-/NONE] [#313244/-/NONE]scan 6.5 ms[-/-/NONE]                        
[#cdd6f4/-/NONE]disk[-/-/NONE]     [#89dceb/-/NONE]starting[-/-/NONE]         [#cdd6f4/-/NONE]3[-/-/NONE]     [#a6adc8/-/NONE]0s[-/-/NONE]     [#a6adc8/-/NONE]0[-/-/NONE]   [#a6adc8/-/NONE]0[-/-/NONE] [#313244/-/NONE]scan 0.40 ms[-/-/NONE]                       
[#cdd6f4/-/NONE]gpu[-/-/NONE]      [#89dceb/-/NONE]starting[-/-/NONE]         [#cdd6f4/-/NONE]3[-/-/NONE]     [#a6adc8/-/NONE]0s[-/-/NONE]     [#a6adc8/-/NONE]0[-/-/NONE]   [#a6adc8/-/NONE]0[-/-/NONE] [#313244/-/NONE]nvml 0.1+2.3+2.1 = 4.5 ms/s[-/-/NONE]        
[#cdd6f4/-/NONE]mpris[-/-/NONE]    [#89dceb/-/NONE]starting[-/-/NONE]         [#cdd6f4/-/NONE]3[-/-/NONE]     [#a6adc8/-/NONE]0s[-/-/NONE]     [#a6adc8/-/NONE]0[-/-/NONE]   [#a6adc8/-/NONE]0[-/-/NONE]                                    
[#cdd6f4/-/NONE]net[-/-/NONE]      [#89dceb/-/NONE]starting[-/-/NONE]         [#cdd6f4/-/NONE]3[-/-/NONE]     [#a6adc8/-/NONE]0s[-/-/NONE]     [#a6adc8/-/NONE]0[-/-/NONE]   [#a6adc8/-/NONE]0[-/-/NONE] [#313244/-/NONE]scan 3.2 ms · 24/32 attributed[-/-/NONE]     
[#cdd6f4/-/NONE]pins[-/-/NONE]     [#89dceb/-/NONE]starting[-/-/NONE]         [#cdd6f4/-/NONE]3[-/-/NONE]     [#a6adc8/-/NONE]0s[-/-/NONE]     [#a6adc8/-/NONE]0[-/-/NONE]   [#a6adc8/-/NONE]0[-/-/NONE] [#313244/-/NONE]read 4.0 ms · ≤2 tx/s[-/-/NONE]              
[#cdd6f4/-/NONE]sensors[-/-/NONE]  [#89dceb/-/NONE]starting[-/-/NONE]         [#cdd6f4/-/NONE]3[-/-/NONE]     [#a6adc8/-/NONE]0s[-/-/NONE]     [#a6adc8/-/NONE]0[-/-/NONE]   [#a6adc8/-/NONE]0[-/-/NONE] [#313244/-/NONE]walk 0.6 ms[-/-/NONE]                        
[-/-/NONE]                                                                                
[-/-/NONE]                                                                                
[-/-/NONE]                                                                                
[-/-/NONE]                                                                                
[-/-/NONE]                                                                                
[-/-/NONE]                                                                                
[-/-/NONE]                                                                                
[-/-/NONE]                                                                                
[-/-/NONE]                                                                                
[-/-/NONE]                                                                                
[-/-/NONE]
