crates/components/tests/snapshots/components__winamp_1x1_at_250x70.snap
---
source: crates/components/tests/components.rs
expression: "view_snapshot(wa.as_mut(), &history, &th, size)"
---
size: 17x8
tier: status
view:
  stack:
    children:
      - - Len(1)
        - text:
            - - bold: false
                role: Ok
                s: "▶ "
              - bold: false
                role: Text
                s: Demo Set — Shor
      - - Len(1)
        - gauge:
            gradient: Title
            label: ""
            text: ~
            value: 0.4444444477558136
      - - Len(1)
        - text:
            - - bold: false
                role: TextMuted
                s: "0:20"
    dir: V
